--- a/example.bib
+++ b/example.bib
@@ -90,3 +90,42 @@ month={Aug},}
    month = {November},
    url = {http://www.sci.utah.edu/~tfogal/academic/tuvok/Fogal-Tuvok.pdf},
 }
+
+@INPROCEEDINGS{5742368, 
+author={H. Guo and H. Xiao and X. Yuan}, 
+booktitle={2011 IEEE Pacific Visualization Symposium}, 
+title={Multi-dimensional transfer function design based on flexible dimension projection embedded in parallel coordinates}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={19-26}, 
+keywords={Gaussian processes;image processing;rendering (computer graphics);Gaussian mixture model;context switching;data exploration;data presentation;data reduction technique;flexible dimension projection;flexible feature classification;multidimensional transfer function design;multivariate volume;octree partitioning;parallel coordinates plot;volume rendered image space;Algorithm design and analysis;Context;Data visualization;Octrees;Rendering (computer graphics);Strips;Transfer functions;Multivariate volume rendering;dimension projection;parallel coordinates;transfer function;user interface design}, 
+doi={10.1109/PACIFICVIS.2011.5742368}, 
+ISSN={2165-8765}, 
+month={March},}
+
+@ARTICLE{1021579, 
+author={J. Kniss and G. Kindlmann and C. Hansen}, 
+journal={IEEE Transactions on Visualization and Computer Graphics}, 
+title={Multidimensional transfer functions for interactive volume rendering}, 
+year={2002}, 
+volume={8}, 
+number={3}, 
+pages={270-285}, 
+keywords={computer graphic equipment;data visualisation;graphical user interfaces;interactive systems;rendering (computer graphics);solid modelling;transfer functions;3D transfer functions;boundary extraction;color assignment;direct manipulation widgets;graphics hardware;interactive shadows;interactive volume exploration;interactive volume rendering;multi-dimensional transfer functions;multivariate data;opacity assignment;scalar data;volume visualization;Biomedical optical imaging;Computer graphics;Data mining;Data visualization;Hardware;Magnetic resonance imaging;Multidimensional systems;Rendering (computer graphics);Table lookup;Transfer functions}, 
+doi={10.1109/TVCG.2002.1021579}, 
+ISSN={1077-2626}, 
+month={Jul},}
+
+@ARTICLE{5887324, 
+author={Y. Wang and W. Chen and J. Zhang and T. Dong and G. Shan and X. Chi}, 
+journal={IEEE Transactions on Visualization and Computer Graphics}, 
+title={Efficient Volume Exploration Using the Gaussian Mixture Model}, 
+year={2011}, 
+volume={17}, 
+number={11}, 
+pages={1560-1573}, 
+keywords={Gaussian processes;computer graphic equipment;coprocessors;rendering (computer graphics);GMM-based exploration scheme;GPU implementation;Gaussian mixture model;elliptical transfer functions;incremental GMM estimation algorithm;multidimensional transfer function;volume exploration scheme;volume rendering process;Aerospace electronics;Estimation;Feature extraction;Histograms;Rendering (computer graphics);Solid modeling;Transfer functions;Gaussian mixture model;Volume classification;temporal coherence.;time-varying data;volume rendering}, 
+doi={10.1109/TVCG.2011.97}, 
+ISSN={1077-2626}, 
+month={Nov},}
