--- a/questionnaire.tex
+++ b/questionnaire.tex
@@ -78,11 +78,22 @@
  Familiarity with 3D: 
 \CheckTablelevel{1}
 
-\section{Scenarion 1: Random Observation }
+\section{Scenario 1: Random Observation }
 Evaluate the level of difficulty when using the lens randomly to detect an object by changing the depth of the lens:
 \CheckTableDifficulty{1}
 Comments:................................................................................ \newline \newline
-How do you value the value of this tool?
+How do you estimate the value of this tool?
+\CheckTable{1}
+Comments:................................................................................ \newline \newline
+Compared with the traditional tools of scanners, I find that the present tool has added value
+\CheckTable{1}
+Comments:................................................................................ \newline \newline
+
+\section{Scenario 2: Observation of an area of interest }
+Evaluate the level of difficulty of using the lens on a partially visible object
+\CheckTableDifficulty{1}
+Comments:................................................................................ \newline \newline
+How do you estimate the value of this tool?
 \CheckTable{1}
 Comments:................................................................................ \newline \newline
 Compared with the traditional tools of scanners, I find that the present tool has added value
