--- a/example.bib
+++ b/example.bib
@@ -11,12 +11,78 @@
 	Url = {http://link.aip.org/link/?RSI/72/4477/1},
 	Year = {2001}}
 	
+@inproceedings{carr_computing_2000,
+	location = {Philadelphia, {PA}, {USA}},
+	title = {Computing Contour Trees in All Dimensions},
+	isbn = {0-89871-453-2},
+	url = {http://dl.acm.org/citation.cfm?id=338219.338659},
+	series = {{SODA} '00},
+	pages = {918--926},
+	booktitle = {Proceedings of the Eleventh Annual {ACM}-{SIAM} Symposium on Discrete Algorithms},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Carr, Hamish and Snoeyink, Jack and Axen, Ulrike},
+	urldate = {2015-08-18},
+	date = {2000},
+}
+	@ARTICLE{6327262, 
+author={C. Tominski and H. Schumann and G. Andrienko and N. Andrienko}, 
+journal={IEEE Transactions on Visualization and Computer Graphics}, 
+title={Stacking-Based Visualization of Trajectory Attribute Data}, 
+year={2012}, 
+volume={18}, 
+number={12}, 
+pages={2565-2574}, 
+keywords={cartography;data visualisation;geographic information systems;solid modelling;2D map;2D time graph;2D-3D display;3D navigation;color mapping;dynamic query mechanism;maritime navigation;radiation surveillance;spatial context;spatio-temporal context;stacked 3D trajectory band;stacking-based visualization;traffic analysis;trajectory attribute data;trajectory visualization;Data visualization;Image color analysis;Navigation;Trajectory;Visualization;exploratory analysis;interaction;spatio-temporal data;trajectory attribute data}, 
+doi={10.1109/Transactions on Visualization and Computer Graphics.2012.265}, 
+ISSN={1077-2626}, 
+}
+
+@article {CGF:CGF12927,
+author = {Preim, Bernhard and Baer, Alexandra and Cunningham, Douglas and Isenberg, Tobias and Ropinski, Timo},
+title = {A Survey of Perceptually Motivated 3D Visualization of Medical Image Data},
+journal = {Computer Graphics Forum},
+volume = {35},
+number = {3},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/cgf.12927},
+doi = {10.1111/cgf.12927},
+pages = {501--525},
+keywords = {Categories and Subject Descriptors (according to ACM CCS), I.3.3 [Computer Graphics]: Picture/Image Generation—Line and curve generation},
+year = {2016},
+}
+
+@article{pascucci_multi-resolution_2004,
+	title = {Multi-resolution computation and presentation of contour trees},
+	url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.308.8105&rep=rep1&type=pdf},
+	pages = {452--290},
+	journaltitle = {Proc. {IASTED} Conference on Visualization, Imaging, and Image Processing},
+	author = {Pascucci, Valerio and Cole-{McLaughlin}, Kree and Scorzelli, Giorgio},
+	urldate = {2015-08-18},
+	date = {2004},
+}	
+	
 @book{deans2007radon,
   title={The Radon transform and some of its applications},
   author={Deans, Stanley R},
   year={2007},
   publisher={Courier Corporation}
 }	
+	
+@article{tversky_animation:_2002,
+	title = {Animation: Can It Facilitate?},
+	volume = {57},
+	issn = {1071-5819},
+	url = {http://dx.doi.org/10.1006/ijhc.2002.1017},
+	doi = {10.1006/ijhc.2002.1017},
+	shorttitle = {Animation},
+	pages = {247--262},
+	number = {4},
+	journaltitle = {Int. J. Hum.-Comput. Stud.},
+	author = {Tversky, Barbara and Morrison, Julie Bauer and Betrancourt, Mireille},
+	urldate = {2015-10-02},
+	date = {2002-10}
+}
+	
 	
 @INPROCEEDINGS{7892381, 
 author={T. Ard and D. M. Krum and T. Phan and D. Duncan and R. Essex and M. Bolas and A. Toga}, 
