--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 11pt, % The default document font size, options: 10pt, 11pt, 12pt
 %oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
 english, % ngerman for German
-doublespacing %onehalfspacing %singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
+onehalfspacing %onehalfspacing %singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
 %draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
 %nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 %liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
@@ -96,7 +96,7 @@ headsepline, % Uncomment to get a line under the header
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Thesis Title} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Interactive visualization for volumetric datasets } % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Dr. James \textsc{Smith}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
@@ -352,7 +352,7 @@ $\omega$ & angular frequency & \si{\radian} \\
 
 \mainmatter % Begin numeric (1,2,3...) page numbering
 
-eee\pagestyle{thesis} % Return the page headers back to the "thesis" style
+\pagestyle{thesis} % Return the page headers back to the "thesis" style
 
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
@@ -361,6 +361,7 @@ eee\pagestyle{thesis} % Return the page headers back to the "thesis" style
 \include{Chapters/StateOfTheArt}
 \include{Chapters/DesignStudy}
 \include{Chapters/lens}
+\include{Chapters/conclusion}
 %\include{Chapters/Chapter1}
 
 %\include{Chapters/Chapter2} 
