--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,16 @@
+@ARTICLE{5743036, 
+author={W. J. Tam and F. Speranza and S. Yano and K. Shimono and H. Ono}, 
+journal={IEEE Transactions on Broadcasting}, 
+title={Stereoscopic 3D-TV: Visual Comfort}, 
+year={2011}, 
+volume={57}, 
+number={2}, 
+pages={335-346}, 
+keywords={human factors;stereo image processing;three-dimensional displays;three-dimensional television;visual communication;broadcaster;content creator;display manufacturer;program provider;stereoscopic 3D-TV;stereoscopic displays;three-dimensional television;visual comfort;visual communication;Cameras;Humans;Pixel;Retina;TV;Visual system;Visualization;Human factors;stereoscopic TV;three-dimensional displays;visual comfort;visual communication}, 
+doi={10.1109/TBC.2011.2125070}, 
+ISSN={0018-9316}, 
+month={June},}
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
