--- a/example.bib
+++ b/example.bib
@@ -11,6 +11,15 @@ doi={10.1109/TBC.2011.2125070},
 ISSN={0018-9316}, 
 month={June},}
 
+
+@book{preim2013visual,
+  title={Visual Computing for Medicine: Theory, Algorithms, and Applications},
+  author={Preim, Bernhard and Botha, Charl P},
+  year={2013},
+  publisher={Newnes}
+}
+
+
 @article{Reference1,
 	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
 	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
