--- a/example.bib
+++ b/example.bib
@@ -123,6 +123,14 @@ year = 1999,
 pages = {263-270}
 }
 
+
+
+@misc{oculus,
+  title = {Oculus Rift},
+  howpublished = {\url{https://www.oculus.com/}},
+  author = {Oculus Rift},
+}
+
 @misc{hololens,
   title = {Microsoft Hololens},
   howpublished = {\url{https://www.microsoft.com/en-us/hololens}},
