--- a/example.bib
+++ b/example.bib
@@ -125,6 +125,12 @@ pages = {263-270}
 
 
 
+@misc{radiology,
+  title = {Scans},
+  howpublished = {\url{https://www.medicinenet.com}},
+  author = {medicinenet},
+}
+
 @misc{oculus,
   title = {Oculus Rift},
   howpublished = {\url{https://www.oculus.com/}},
