--- a/example.bib
+++ b/example.bib
@@ -11,6 +11,16 @@ doi={10.1109/TBC.2011.2125070},
 ISSN={0018-9316}, 
 month={June},}
 
+@article{everts15,
+author = {Maarten H. Everts and Eric Begue and Henk Bekker and Jos B. T. M. Roerdink and Tobias Isenberg},
+year = 2015,
+title = {Exploration of the Brain's White Matter Structure through Visual Abstraction and Multi-Scale Local Fiber Tract Contraction},
+journal = {IEEE Transactions on Visualization and Computer Graphics},
+volume = 21,
+number = 7,
+pages = {808-821},
+}
+
 @article{Lorensen:1987:MCH:37402.37422,
  author = {Lorensen, William E. and Cline, Harvey E.},
  title = {Marching Cubes: A High Resolution 3D Surface Construction Algorithm},
