--- a/main.tex
+++ b/main.tex
@@ -97,17 +97,17 @@ headsepline, % Uncomment to get a line under the header
 %----------------------------------------------------------------------------------------
 
 \thesistitle{Interactive visualization for volumetric datasets } % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Dr. James \textsc{Smith}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
+\supervisor{Christophe \textsc{Hurter}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{John \textsc{Smith}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
+\author{Michael \textsc{Traor\'e}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 
-\subject{Biological Sciences} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
+\subject{Computer Science} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\university{\href{http://www.university.com}{University Name}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
-\department{\href{http://department.university.com}{Department or School Name}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
-\group{\href{http://researchgroup.university.com}{Research Group Name}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
+\university{\href{https://www.isae-supaero.fr/en/}{Institut supérieur de l'aéronautique et de l'espace (ISAE-SUPAERO)}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
+\department{\href{http://www.enac.fr}{\'Ecole Nationale de l'Aviation Civile (ENAC)}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
+\group{\href{http://devi.recherche.enac.fr}{Data Economics and Interactive Visualization (DEVI)}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
 \faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
@@ -210,13 +210,13 @@ headsepline, % Uncomment to get a line under the header
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{https://www.linkedin.com/in/michael-traor%C3%A9-1a620596/}{\authorname} % Author name - remove the \href bracket to remove the link
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-\href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+\href{http://recherche.enac.fr/~hurter/}{\supname} % Supervisor name - remove the \href bracket to remove the link  
 \end{flushright}
 \end{minipage}\\[3cm]
  
@@ -261,6 +261,7 @@ headsepline, % Uncomment to get a line under the header
 
 \cleardoublepage
 
+
 %----------------------------------------------------------------------------------------
 %	QUOTATION PAGE
 %----------------------------------------------------------------------------------------
@@ -290,6 +291,25 @@ abstract here
 The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
 \end{acknowledgements}
 
+%---------------------------------------------------------------------------------------
+%  Publications
+%----------------------------------------------------------------------------------------
+\begin{publications}
+\addchaptertocentry{\publicationname} % Add the acknowledgements to the table of contents
+Here are listed all of my publications during this thesis: \ldots
+\begin{enumerate}
+
+\item \textbf{ Journal }: Michael Traor\'e and Christophe Hurter, "Interactive Exploration of 3D Scanned Baggage", in IEEE Computer Graphics and Applications, vol. 37, no. 1, pp. 27-33, Jan.-Feb. 2017.
+\item \textbf{ Conference + Journal} : Michael Traor\'e , Christophe Hurter, and Alexandru Telea, "Interactive Obstruction-free Lensing for Volumetric Data Visualization", 2018 IEEE Scientific Visualization Conference (SciVis  TVCG SI), Berlin, Germany
+\item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Object definition in virtual 3D environment". U.S. Patent Application No 15/466,991, 28 sept. 2017.
+\item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Boolean object management in 3D display". U.S. Patent Application No 15/466,497, 28 sept. 2017.
+\item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Selective display in a computer generated environment". U.S. Patent Application No 15/485,828, 19 oct. 2017.
+
+\end{enumerate}
+
+\end{publications}
+
+
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
 %----------------------------------------------------------------------------------------
@@ -306,39 +326,46 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{DVR} & \textbf{D}irect \textbf{V}olume \textbf{R}endering\\
+\textbf{AR} & \textbf{A}ugmented \textbf{R}eality \\
+\textbf{MR} & \textbf{M}ixed \textbf{R}eality \\
+\textbf{VR} & \textbf{V}irtual \textbf{R}eality \\
+\textbf{TF} & \textbf{T}ransfer \textbf{F}unction \\
 
 \end{abbreviations}
+
+
+
+
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
 %----------------------------------------------------------------------------------------
 
-\begin{constants}{lr@{${}={}$}l} % The list of physical constants is a three column table
+%\begin{constants}{lr@{${}={}$}l} % The list of physical constants is a three column table
 
 % The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
 
-Speed of Light & $c_{0}$ & \SI{2.99792458e8}{\meter\per\second} (exact)\\
-%Constant Name & $Symbol$ & $Constant Value$ with units\\
+%Speed of Light & $c_{0}$ & \SI{2.99792458e8}{\meter\per\second} (exact)\\
+%%Constant Name & $Symbol$ & $Constant Value$ with units\\
 
-\end{constants}
+%\end{constants}
 
 %----------------------------------------------------------------------------------------
 %	SYMBOLS
 %----------------------------------------------------------------------------------------
+%\begin{comment}
+%\begin{symbols}{lll} % Include a list of Symbols (a three column table)
 
-\begin{symbols}{lll} % Include a list of Symbols (a three column table)
+%$a$ & distance & \si{\meter} \\
+%$P$ & power & \si{\watt} (\si{\joule\per\second}) \\
+%%Symbol & Name & Unit \\
 
-$a$ & distance & \si{\meter} \\
-$P$ & power & \si{\watt} (\si{\joule\per\second}) \\
-%Symbol & Name & Unit \\
+%\addlinespace % Gap to separate the Roman symbols from the Greek
 
-\addlinespace % Gap to separate the Roman symbols from the Greek
+%$\omega$ & angular frequency & \si{\radian} \\
 
-$\omega$ & angular frequency & \si{\radian} \\
-
-\end{symbols}
+%\end{symbols}
 
 %----------------------------------------------------------------------------------------
 %	DEDICATION
