--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,21 @@
+@inproceedings{Grossman:2005:BCE:1054972.1055012,
+ author = {Grossman, Tovi and Balakrishnan, Ravin},
+ title = {The Bubble Cursor: Enhancing Target Acquisition by Dynamic Resizing of the Cursor's Activation Area},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '05},
+ year = {2005},
+ isbn = {1-58113-998-5},
+ location = {Portland, Oregon, USA},
+ pages = {281--290},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1054972.1055012},
+ doi = {10.1145/1054972.1055012},
+ acmid = {1055012},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Fitts' law, area cursor, bubble cursor, target acquisition},
+} 
+
 @ARTICLE{5743036, 
 author={W. J. Tam and F. Speranza and S. Yano and K. Shimono and H. Ono}, 
 journal={IEEE Transactions on Broadcasting}, 
