--- a/main.tex
+++ b/main.tex
@@ -294,7 +294,7 @@ Secondly, we proposed a novel technique which combines high-quality DVR with a f
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+Thank you\ldots
 \end{acknowledgements}
 
 %---------------------------------------------------------------------------------------
@@ -307,6 +307,7 @@ Here are listed all of my publications during this thesis: \ldots
 
 \item \textbf{ Journal }: Michael Traor\'e and Christophe Hurter, "Interactive Exploration of 3D Scanned Baggage", in IEEE Computer Graphics and Applications, vol. 37, no. 1, pp. 27-33, Jan.-Feb. 2017.
 \item \textbf{ Conference + Journal} : Michael Traor\'e , Christophe Hurter, and Alexandru Telea, "Interactive Obstruction-free Lensing for Volumetric Data Visualization", 2018 IEEE Scientific Visualization Conference (SciVis  TVCG SI), Berlin, Germany
+\item  \textbf{ Conference} :  Michael Traor\'e and Christophe Hurter, "Exploratory Study with Eye Tracking Devices to Build Interactive Systems for Air Traffic Controllers", HCI-Aero 2016, International Conference on Human-Computer Interaction in Aerospace , Sep 2016, Paris, France.
 \item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Object definition in virtual 3D environment". U.S. Patent Application No 15/466,991, 28 sept. 2017.
 \item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Boolean object management in 3D display". U.S. Patent Application No 15/466,497, 28 sept. 2017.
 \item \textbf{ Patent } : HURTER, Christophe et SOMPAGNIMDI, Michael TRAORÉ. "Selective display in a computer generated environment". U.S. Patent Application No 15/485,828, 19 oct. 2017.
@@ -330,15 +331,15 @@ Here are listed all of my publications during this thesis: \ldots
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
 
-\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
+%\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{DVR} & \textbf{D}irect \textbf{V}olume \textbf{R}endering\\
-\textbf{AR} & \textbf{A}ugmented \textbf{R}eality \\
-\textbf{MR} & \textbf{M}ixed \textbf{R}eality \\
-\textbf{VR} & \textbf{V}irtual \textbf{R}eality \\
-\textbf{TF} & \textbf{T}ransfer \textbf{F}unction \\
+%\textbf{DVR} & \textbf{D}irect \textbf{V}olume \textbf{R}endering\\
+%\textbf{AR} & \textbf{A}ugmented \textbf{R}eality \\
+%\textbf{MR} & \textbf{M}ixed \textbf{R}eality \\
+%\textbf{VR} & \textbf{V}irtual \textbf{R}eality \\
+%\textbf{TF} & \textbf{T}ransfer \textbf{F}unction \\
 
-\end{abbreviations}
+%\end{abbreviations}
 
 
 
@@ -377,7 +378,7 @@ Here are listed all of my publications during this thesis: \ldots
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{For/Dedicated to/To my\ldots} 
+\dedicatory{Dedicated to  my family \ldots} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
