--- a/main.tex
+++ b/main.tex
@@ -270,9 +270,10 @@ headsepline, % Uncomment to get a line under the header
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
+\noindent\enquote{\itshape The most important thing in the world is family and love. 
+}\bigbreak
 
-\hfill Dave Barry
+\hfill John Wooden 
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
