--- a/example.bib
+++ b/example.bib
@@ -16,6 +16,25 @@
  keywords = {Fitts' law, area cursor, bubble cursor, target acquisition},
 } 
 
+@inproceedings{Zhai:1999:MGI:302979.303053,
+ author = {Zhai, Shumin and Morimoto, Carlos and Ihde, Steven},
+ title = {Manual and Gaze Input Cascaded (MAGIC) Pointing},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '99},
+ year = {1999},
+ isbn = {0-201-48559-1},
+ location = {Pittsburgh, Pennsylvania, USA},
+ pages = {246--253},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/302979.303053},
+ doi = {10.1145/302979.303053},
+ acmid = {303053},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Fitts'law, computer input, computer vision, eye, eye tracking, gaze, gaze tracking, multi-modal interface, pointing},
+} 
+
+
 @ARTICLE{5743036, 
 author={W. J. Tam and F. Speranza and S. Yano and K. Shimono and H. Ono}, 
 journal={IEEE Transactions on Broadcasting}, 
