--- a/example.bib
+++ b/example.bib
@@ -52,9 +52,18 @@ month={June},}
   title={Human computer interaction handbook: Fundamentals, evolving technologies, and emerging applications},
   author={Jacko, Julie A},
   year={2012},
-  publisher={CRC press}
+  publisher={CRC press},
+  
 }
 
+
+@book{storytelling,
+title={ Data-Driven Storytelling},
+ author={N. Henry Riche and C. Hurter and N. Diakopoulos  and S. Carpendale},
+ year={2018},
+  publisher={A K Peters/CRC Press},
+  isbn={9781138197107},
+}
 @article{everts15,
 author = {Maarten H. Everts and Eric Begue and Henk Bekker and Jos B. T. M. Roerdink and Tobias Isenberg},
 year = 2015,
