--- a/main.tex
+++ b/main.tex
@@ -192,6 +192,8 @@ headsepline, % Uncomment to get a line under the header
 }
 
 \begin{document}
+\sloppy
+
 
 \includepdfset{pages=-} 
 \includepdf{couverture_these.pdf}
